3_Semantic/y.output
Terminals unused in grammar

   ERROR


문법

    0 $accept: program $end

    1 program: dec_list

    2 dec_list: dec_list dec
    3         | dec

    4 dec: var_dec
    5    | func_dec

    6 savename: ID

    7 savenum: NUM

    8 var_dec: type_spec savename SEMI
    9        | type_spec savename LBRACE savenum RBRACE SEMI

   10 type_spec: INT
   11          | VOID

   12 func_dec: type_spec savename LPAREN params RPAREN comp_stmt

   13 params: param_list
   14       | VOID

   15 param_list: param_list COMMA param
   16           | param

   17 param: type_spec savename
   18      | type_spec savename LBRACE RBRACE

   19 comp_stmt: LCURLY local_dec stmt_list RCURLY

   20 local_dec: local_dec var_dec
   21          | %empty

   22 stmt_list: stmt_list stmt
   23          | %empty

   24 stmt: exp_stmt
   25     | comp_stmt
   26     | select_stmt
   27     | iter_stmt
   28     | return_stmt

   29 exp_stmt: exp SEMI
   30         | SEMI

   31 select_stmt: IF LPAREN exp RPAREN stmt
   32            | IF LPAREN exp RPAREN stmt ELSE stmt

   33 iter_stmt: WHILE LPAREN exp RPAREN stmt

   34 return_stmt: RETURN SEMI
   35            | RETURN exp SEMI

   36 exp: var ASSIGN exp
   37    | simple_exp

   38 var: savename
   39    | savename LBRACE exp RBRACE

   40 simple_exp: add_exp relop add_exp
   41           | add_exp

   42 relop: LE
   43      | LT
   44      | GT
   45      | GE
   46      | EQ
   47      | NE

   48 add_exp: add_exp addop term
   49        | term

   50 addop: PLUS
   51      | MINUS

   52 term: term mulop factor
   53     | factor

   54 mulop: TIMES
   55      | OVER

   56 factor: LPAREN exp RPAREN
   57       | var
   58       | call
   59       | savenum

   60 call: savename LPAREN args RPAREN

   61 args: arg_list
   62     | %empty

   63 arg_list: arg_list COMMA exp
   64         | exp


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 31 32
WHILE (259) 33
RETURN (260) 34 35
INT (261) 10
VOID (262) 11 14
ID (263) 6
NUM (264) 7
ASSIGN (265) 36
EQ (266) 46
NE (267) 47
LT (268) 43
LE (269) 42
GT (270) 44
GE (271) 45
PLUS (272) 50
MINUS (273) 51
TIMES (274) 54
OVER (275) 55
LPAREN (276) 12 31 32 33 56 60
LBRACE (277) 9 18 39
RBRACE (278) 9 18 39
LCURLY (279) 19
RCURLY (280) 19
SEMI (281) 8 9 29 30 34 35
COMMA (282) 15 63
ERROR (283)
RPAREN (284) 12 31 32 33 56 60
ELSE (285) 32


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
dec_list (33)
    on left: 2 3, on right: 1 2
dec (34)
    on left: 4 5, on right: 2 3
savename (35)
    on left: 6, on right: 8 9 12 17 18 38 39 60
savenum (36)
    on left: 7, on right: 9 59
var_dec (37)
    on left: 8 9, on right: 4 20
type_spec (38)
    on left: 10 11, on right: 8 9 12 17 18
func_dec (39)
    on left: 12, on right: 5
params (40)
    on left: 13 14, on right: 12
param_list (41)
    on left: 15 16, on right: 13 15
param (42)
    on left: 17 18, on right: 15 16
comp_stmt (43)
    on left: 19, on right: 12 25
local_dec (44)
    on left: 20 21, on right: 19 20
stmt_list (45)
    on left: 22 23, on right: 19 22
stmt (46)
    on left: 24 25 26 27 28, on right: 22 31 32 33
exp_stmt (47)
    on left: 29 30, on right: 24
select_stmt (48)
    on left: 31 32, on right: 26
iter_stmt (49)
    on left: 33, on right: 27
return_stmt (50)
    on left: 34 35, on right: 28
exp (51)
    on left: 36 37, on right: 29 31 32 33 35 36 39 56 63 64
var (52)
    on left: 38 39, on right: 36 57
simple_exp (53)
    on left: 40 41, on right: 37
relop (54)
    on left: 42 43 44 45 46 47, on right: 40
add_exp (55)
    on left: 48 49, on right: 40 41 48
addop (56)
    on left: 50 51, on right: 48
term (57)
    on left: 52 53, on right: 48 49 52
mulop (58)
    on left: 54 55, on right: 52
factor (59)
    on left: 56 57 58 59, on right: 52 53
call (60)
    on left: 60, on right: 58
args (61)
    on left: 61 62, on right: 60
arg_list (62)
    on left: 63 64, on right: 61 63


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    dec_list   go to state 4
    dec        go to state 5
    var_dec    go to state 6
    type_spec  go to state 7
    func_dec   go to state 8


State 1

   10 type_spec: INT .

    $default  reduce using rule 10 (type_spec)


State 2

   11 type_spec: VOID .

    $default  reduce using rule 11 (type_spec)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: dec_list .
    2 dec_list: dec_list . dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    dec        go to state 10
    var_dec    go to state 6
    type_spec  go to state 7
    func_dec   go to state 8


State 5

    3 dec_list: dec .

    $default  reduce using rule 3 (dec_list)


State 6

    4 dec: var_dec .

    $default  reduce using rule 4 (dec)


State 7

    8 var_dec: type_spec . savename SEMI
    9        | type_spec . savename LBRACE savenum RBRACE SEMI
   12 func_dec: type_spec . savename LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 11

    savename  go to state 12


State 8

    5 dec: func_dec .

    $default  reduce using rule 5 (dec)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 dec_list: dec_list dec .

    $default  reduce using rule 2 (dec_list)


State 11

    6 savename: ID .

    $default  reduce using rule 6 (savename)


State 12

    8 var_dec: type_spec savename . SEMI
    9        | type_spec savename . LBRACE savenum RBRACE SEMI
   12 func_dec: type_spec savename . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 13
    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 13

   12 func_dec: type_spec savename LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_spec   go to state 17
    params      go to state 18
    param_list  go to state 19
    param       go to state 20


State 14

    9 var_dec: type_spec savename LBRACE . savenum RBRACE SEMI

    NUM  shift, and go to state 21

    savenum  go to state 22


State 15

    8 var_dec: type_spec savename SEMI .

    $default  reduce using rule 8 (var_dec)


State 16

   11 type_spec: VOID .
   14 params: VOID .

    RPAREN    reduce using rule 14 (params)
    $default  reduce using rule 11 (type_spec)


State 17

   17 param: type_spec . savename
   18      | type_spec . savename LBRACE RBRACE

    ID  shift, and go to state 11

    savename  go to state 23


State 18

   12 func_dec: type_spec savename LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 24


State 19

   13 params: param_list .
   15 param_list: param_list . COMMA param

    COMMA  shift, and go to state 25

    $default  reduce using rule 13 (params)


State 20

   16 param_list: param .

    $default  reduce using rule 16 (param_list)


State 21

    7 savenum: NUM .

    $default  reduce using rule 7 (savenum)


State 22

    9 var_dec: type_spec savename LBRACE savenum . RBRACE SEMI

    RBRACE  shift, and go to state 26


State 23

   17 param: type_spec savename .
   18      | type_spec savename . LBRACE RBRACE

    LBRACE  shift, and go to state 27

    $default  reduce using rule 17 (param)


State 24

   12 func_dec: type_spec savename LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 28

    comp_stmt  go to state 29


State 25

   15 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec  go to state 17
    param      go to state 30


State 26

    9 var_dec: type_spec savename LBRACE savenum RBRACE . SEMI

    SEMI  shift, and go to state 31


State 27

   18 param: type_spec savename LBRACE . RBRACE

    RBRACE  shift, and go to state 32


State 28

   19 comp_stmt: LCURLY . local_dec stmt_list RCURLY

    $default  reduce using rule 21 (local_dec)

    local_dec  go to state 33


State 29

   12 func_dec: type_spec savename LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 12 (func_dec)


State 30

   15 param_list: param_list COMMA param .

    $default  reduce using rule 15 (param_list)


State 31

    9 var_dec: type_spec savename LBRACE savenum RBRACE SEMI .

    $default  reduce using rule 9 (var_dec)


State 32

   18 param: type_spec savename LBRACE RBRACE .

    $default  reduce using rule 18 (param)


State 33

   19 comp_stmt: LCURLY local_dec . stmt_list RCURLY
   20 local_dec: local_dec . var_dec

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 23 (stmt_list)

    var_dec    go to state 34
    type_spec  go to state 35
    stmt_list  go to state 36


State 34

   20 local_dec: local_dec var_dec .

    $default  reduce using rule 20 (local_dec)


State 35

    8 var_dec: type_spec . savename SEMI
    9        | type_spec . savename LBRACE savenum RBRACE SEMI

    ID  shift, and go to state 11

    savename  go to state 37


State 36

   19 comp_stmt: LCURLY local_dec stmt_list . RCURLY
   22 stmt_list: stmt_list . stmt

    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    RETURN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 28
    RCURLY  shift, and go to state 42
    SEMI    shift, and go to state 43

    savename     go to state 44
    savenum      go to state 45
    comp_stmt    go to state 46
    stmt         go to state 47
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    var          go to state 53
    simple_exp   go to state 54
    add_exp      go to state 55
    term         go to state 56
    factor       go to state 57
    call         go to state 58


State 37

    8 var_dec: type_spec savename . SEMI
    9        | type_spec savename . LBRACE savenum RBRACE SEMI

    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 38

   31 select_stmt: IF . LPAREN exp RPAREN stmt
   32            | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 59


State 39

   33 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 60


State 40

   34 return_stmt: RETURN . SEMI
   35            | RETURN . exp SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    SEMI    shift, and go to state 61

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 62
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 41

   56 factor: LPAREN . exp RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 63
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 42

   19 comp_stmt: LCURLY local_dec stmt_list RCURLY .

    $default  reduce using rule 19 (comp_stmt)


State 43

   30 exp_stmt: SEMI .

    $default  reduce using rule 30 (exp_stmt)


State 44

   38 var: savename .
   39    | savename . LBRACE exp RBRACE
   60 call: savename . LPAREN args RPAREN

    LPAREN  shift, and go to state 64
    LBRACE  shift, and go to state 65

    $default  reduce using rule 38 (var)


State 45

   59 factor: savenum .

    $default  reduce using rule 59 (factor)


State 46

   25 stmt: comp_stmt .

    $default  reduce using rule 25 (stmt)


State 47

   22 stmt_list: stmt_list stmt .

    $default  reduce using rule 22 (stmt_list)


State 48

   24 stmt: exp_stmt .

    $default  reduce using rule 24 (stmt)


State 49

   26 stmt: select_stmt .

    $default  reduce using rule 26 (stmt)


State 50

   27 stmt: iter_stmt .

    $default  reduce using rule 27 (stmt)


State 51

   28 stmt: return_stmt .

    $default  reduce using rule 28 (stmt)


State 52

   29 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 66


State 53

   36 exp: var . ASSIGN exp
   57 factor: var .

    ASSIGN  shift, and go to state 67

    $default  reduce using rule 57 (factor)


State 54

   37 exp: simple_exp .

    $default  reduce using rule 37 (exp)


State 55

   40 simple_exp: add_exp . relop add_exp
   41           | add_exp .
   48 add_exp: add_exp . addop term

    EQ     shift, and go to state 68
    NE     shift, and go to state 69
    LT     shift, and go to state 70
    LE     shift, and go to state 71
    GT     shift, and go to state 72
    GE     shift, and go to state 73
    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 41 (simple_exp)

    relop  go to state 76
    addop  go to state 77


State 56

   49 add_exp: term .
   52 term: term . mulop factor

    TIMES  shift, and go to state 78
    OVER   shift, and go to state 79

    $default  reduce using rule 49 (add_exp)

    mulop  go to state 80


State 57

   53 term: factor .

    $default  reduce using rule 53 (term)


State 58

   58 factor: call .

    $default  reduce using rule 58 (factor)


State 59

   31 select_stmt: IF LPAREN . exp RPAREN stmt
   32            | IF LPAREN . exp RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 81
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 60

   33 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 82
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 61

   34 return_stmt: RETURN SEMI .

    $default  reduce using rule 34 (return_stmt)


State 62

   35 return_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 83


State 63

   56 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 84


State 64

   60 call: savename LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    $default  reduce using rule 62 (args)

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 85
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58
    args        go to state 86
    arg_list    go to state 87


State 65

   39 var: savename LBRACE . exp RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 88
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 66

   29 exp_stmt: exp SEMI .

    $default  reduce using rule 29 (exp_stmt)


State 67

   36 exp: var ASSIGN . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 89
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 68

   46 relop: EQ .

    $default  reduce using rule 46 (relop)


State 69

   47 relop: NE .

    $default  reduce using rule 47 (relop)


State 70

   43 relop: LT .

    $default  reduce using rule 43 (relop)


State 71

   42 relop: LE .

    $default  reduce using rule 42 (relop)


State 72

   44 relop: GT .

    $default  reduce using rule 44 (relop)


State 73

   45 relop: GE .

    $default  reduce using rule 45 (relop)


State 74

   50 addop: PLUS .

    $default  reduce using rule 50 (addop)


State 75

   51 addop: MINUS .

    $default  reduce using rule 51 (addop)


State 76

   40 simple_exp: add_exp relop . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename  go to state 44
    savenum   go to state 45
    var       go to state 90
    add_exp   go to state 91
    term      go to state 56
    factor    go to state 57
    call      go to state 58


State 77

   48 add_exp: add_exp addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename  go to state 44
    savenum   go to state 45
    var       go to state 90
    term      go to state 92
    factor    go to state 57
    call      go to state 58


State 78

   54 mulop: TIMES .

    $default  reduce using rule 54 (mulop)


State 79

   55 mulop: OVER .

    $default  reduce using rule 55 (mulop)


State 80

   52 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename  go to state 44
    savenum   go to state 45
    var       go to state 90
    factor    go to state 93
    call      go to state 58


State 81

   31 select_stmt: IF LPAREN exp . RPAREN stmt
   32            | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 94


State 82

   33 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 95


State 83

   35 return_stmt: RETURN exp SEMI .

    $default  reduce using rule 35 (return_stmt)


State 84

   56 factor: LPAREN exp RPAREN .

    $default  reduce using rule 56 (factor)


State 85

   64 arg_list: exp .

    $default  reduce using rule 64 (arg_list)


State 86

   60 call: savename LPAREN args . RPAREN

    RPAREN  shift, and go to state 96


State 87

   61 args: arg_list .
   63 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 97

    $default  reduce using rule 61 (args)


State 88

   39 var: savename LBRACE exp . RBRACE

    RBRACE  shift, and go to state 98


State 89

   36 exp: var ASSIGN exp .

    $default  reduce using rule 36 (exp)


State 90

   57 factor: var .

    $default  reduce using rule 57 (factor)


State 91

   40 simple_exp: add_exp relop add_exp .
   48 add_exp: add_exp . addop term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 40 (simple_exp)

    addop  go to state 77


State 92

   48 add_exp: add_exp addop term .
   52 term: term . mulop factor

    TIMES  shift, and go to state 78
    OVER   shift, and go to state 79

    $default  reduce using rule 48 (add_exp)

    mulop  go to state 80


State 93

   52 term: term mulop factor .

    $default  reduce using rule 52 (term)


State 94

   31 select_stmt: IF LPAREN exp RPAREN . stmt
   32            | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    RETURN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 43

    savename     go to state 44
    savenum      go to state 45
    comp_stmt    go to state 46
    stmt         go to state 99
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    var          go to state 53
    simple_exp   go to state 54
    add_exp      go to state 55
    term         go to state 56
    factor       go to state 57
    call         go to state 58


State 95

   33 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    RETURN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 43

    savename     go to state 44
    savenum      go to state 45
    comp_stmt    go to state 46
    stmt         go to state 100
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    var          go to state 53
    simple_exp   go to state 54
    add_exp      go to state 55
    term         go to state 56
    factor       go to state 57
    call         go to state 58


State 96

   60 call: savename LPAREN args RPAREN .

    $default  reduce using rule 60 (call)


State 97

   63 arg_list: arg_list COMMA . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    savename    go to state 44
    savenum     go to state 45
    exp         go to state 101
    var         go to state 53
    simple_exp  go to state 54
    add_exp     go to state 55
    term        go to state 56
    factor      go to state 57
    call        go to state 58


State 98

   39 var: savename LBRACE exp RBRACE .

    $default  reduce using rule 39 (var)


State 99

   31 select_stmt: IF LPAREN exp RPAREN stmt .
   32            | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 102

    $default  reduce using rule 31 (select_stmt)


State 100

   33 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 33 (iter_stmt)


State 101

   63 arg_list: arg_list COMMA exp .

    $default  reduce using rule 63 (arg_list)


State 102

   32 select_stmt: IF LPAREN exp RPAREN stmt ELSE . stmt

    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    RETURN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 28
    SEMI    shift, and go to state 43

    savename     go to state 44
    savenum      go to state 45
    comp_stmt    go to state 46
    stmt         go to state 103
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    var          go to state 53
    simple_exp   go to state 54
    add_exp      go to state 55
    term         go to state 56
    factor       go to state 57
    call         go to state 58


State 103

   32 select_stmt: IF LPAREN exp RPAREN stmt ELSE stmt .

    $default  reduce using rule 32 (select_stmt)
